<resources>
    <string name="app_name" translatable="false">PRM_1 - ExpensesList</string>
    <string name="add">Add</string>
    <string name="list">List: </string>
    <string name="add_successful">Do</string>
    <string name="save">Save</string>
    <string name="form_add">Add new entry</string>
    <string name="form_edit">Edit entry: </string>
    <string name="month_view">Month view</string>
    <string name="form_label_place">Place</string>
    <string name="form_label_date">Date</string>
    <string name="form_label_value">Value</string>
    <string name="form_label_type">Type</string>
    <string name="form_info_add">Please add new expense</string>
    <string name="form_info_edit">Edit expense</string>
    <string name="form_required_error">All fields are required</string>
    <string name="share">Share</string>
    <string name="dialog_remove_title">Warning</string>
    <string name="dialog_remove_text">Do you want to remove expense with id: </string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="db_insert_success">Added Successfully!</string>
    <string name="db_update_sucess">Updated Successfully!</string>
    <string name="list_monthValue">Current month balance:</string>
    <string name="balance_view">Finanse Manager</string>
    <string name="month_chart_text">Month balance chart</string>
    <string name="chart_line">Expenses</string>
    <string name="chart_data_not_availble">Data not Available</string>
</resources>