<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/form_shareButton"
        style="@style/ThemeOverlay.Material3.FloatingActionButton.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/share"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/ic_baseline_share_24"
        tools:ignore="ImageContrastCheck" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/form_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/form_info_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                >


                <EditText
                    android:id="@+id/input_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/form_label_date"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:textColor="#757575"
                    tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp">

                <EditText
                    android:id="@+id/input_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:ems="10"
                    android:hint="@string/form_label_value"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned|numberDecimal"
                    android:minHeight="48dp"
                    android:textColor="#757575"
                    tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:minHeight="48dp"
                >

                <EditText
                    android:id="@+id/input_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/form_label_place"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="#757575"
                    tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="38dp">

                <EditText
                    android:id="@+id/input_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:autofillHints=""
                    android:hint="@string/form_label_type"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="#757575"
                    tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/form_saveButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="48dp"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>